Replace the OrganizationProfile "settings" reordering label with "general"

--- a/docs/components/customization/organization-profile.mdx
+++ b/docs/components/customization/organization-profile.mdx
@@ -204,7 +204,7 @@ All props below are required.
 
 ### Reordering default routes
 
-If you want to reorder the default routes (`Members` and `Settings`) in the `OrganizationProfile` navigation sidebar, you can use the `<OrganizationProfile.Page />` component with the `label` prop set to `'members'` or `'settings'`. This will target the existing default page and allow you to rearrange it.
+If you want to reorder the default routes (`General` and `Members`) in the `OrganizationProfile` navigation sidebar, you can use the `<OrganizationProfile.Page />` component with the `label` prop set to `'general'` or `'members'`. This will target the existing default page and allow you to rearrange it.
 
 ### Usage
 
@@ -227,7 +227,7 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
           </OrganizationProfile.Page>
           <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
           <OrganizationProfile.Page label="members" />
-          <OrganizationProfile.Page label="settings" />
+          <OrganizationProfile.Page label="general" />
         </OrganizationProfile>
       );
 
@@ -246,7 +246,7 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
           </OrganizationProfile.Page>
           <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
           <OrganizationProfile.Page label="members" />
-          <OrganizationProfile.Page label="settings" />
+          <OrganizationProfile.Page label="general" />
         </OrganizationProfile>
       );
 
@@ -268,7 +268,7 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
         </OrganizationProfile.Page>
         <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
         <OrganizationProfile.Page label="members" />
-        <OrganizationProfile.Page label="settings" />
+        <OrganizationProfile.Page label="general" />
       </OrganizationProfile>
     );
 
@@ -290,7 +290,7 @@ If you want to reorder the default routes (`Members` and `Settings`) in the `Org
         </OrganizationProfile.Page>
         <OrganizationProfile.Link label="Homepage" url="/home" labelIcon={<Icon />} />
         <OrganizationProfile.Page label="members" />
-        <OrganizationProfile.Page label="settings" />
+        <OrganizationProfile.Page label="general" />
       </OrganizationProfile>
     );
     }
@@ -303,9 +303,9 @@ The above example will result in the following order:
 1. Custom Page
 2. Homepage
 3. Members
-4. Settings
+4. General
 
-It's important to note that the first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/organitzation-members` and `/organization-settings`. Also, the first item in the list cannot be a `<OrganizationProfile.Link />` component.
+It's important to note that the first page in the list will be rendered under the root path `/` (its `url` will be ignored) and the Clerk pages will be rendered under the path `/organitzation-members` and `/organization-general`. Also, the first item in the list cannot be a `<OrganizationProfile.Link />` component.
 
 ### Using custom pages with the `<OrganizationSwitcher />` component
 
@@ -333,7 +333,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
             </OrganizationSwitcher.OrganizationProfilePage>
             <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
             <OrganizationSwitcher.OrganizationProfilePage label="members" />
-            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+            <OrganizationSwitcher.OrganizationProfilePage label="general" />
           </OrganizationSwitcher>
         </header>
       );
@@ -354,7 +354,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
             </OrganizationSwitcher.OrganizationProfilePage>
             <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
             <OrganizationSwitcher.OrganizationProfilePage label="members" />
-            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+            <OrganizationSwitcher.OrganizationProfilePage label="general" />
           </OrganizationSwitcher>
         </header>
       );
@@ -378,7 +378,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
             </OrganizationSwitcher.OrganizationProfilePage>
             <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
             <OrganizationSwitcher.OrganizationProfilePage label="members" />
-            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+            <OrganizationSwitcher.OrganizationProfilePage label="general" />
           </OrganizationSwitcher>
         </header>
       );
@@ -402,7 +402,7 @@ If you are using the `<OrganizationSwitcher />` component with the default props
             </OrganizationSwitcher.OrganizationProfilePage>
             <OrganizationSwitcher.OrganizationProfileLink label="Homepage" url="/home" labelIcon={<Icon />} />
             <OrganizationSwitcher.OrganizationProfilePage label="members" />
-            <OrganizationSwitcher.OrganizationProfilePage label="settings" />
+            <OrganizationSwitcher.OrganizationProfilePage label="general" />
           </OrganizationSwitcher>
         </header>
           );
