chore: Re-add JS sign-up example

--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -77,6 +77,16 @@ function Example() {
   );
 }
 ```
+
+```js
+const { client } = window.Clerk;
+const signUp = await client.signUp.create({
+  identifier: "example@email.com",
+  password: "Tester01!",
+})
+  .then((res) => console.log("response", res))
+  .catch((err) => setError(err.errors[0].message));
+```
 </CodeBlockTabs>
 
 Errors returned from the [`signIn()`](/docs/references/react/use-sign-in) function are handled in a similar way:
