update filename and highlight necessary lines in code examples

--- a/docs/references/javascript/types/clerk-paginated-response.mdx
+++ b/docs/references/javascript/types/clerk-paginated-response.mdx
@@ -1,9 +1,9 @@
 ---
-title: PaginatedResponse
+title: ClerkPaginatedResponse
 description: An interface that describes the response of a method that returns a paginated list of resources.
 ---
 
-# `PaginatedResponse<T>`
+# `ClerkPaginatedResponse`
 
 An interface that describes the response of a method that returns a paginated list of resources.
 
