update all instances and references to createOrganization as we dropped support for string param

--- a/docs/references/javascript/clerk/clerk.mdx
+++ b/docs/references/javascript/clerk/clerk.mdx
@@ -37,7 +37,7 @@ Create an instance of the `Clerk` class with dedicated options.
 
 > This method is only available when importing `Clerk` from `@clerk/clerk-js`, rather than using a Window script.
 
-#### Properties
+#### `constructor()` properties
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -61,8 +61,7 @@ function isReady(): boolean;
 
 Indicates when the [ClerkJS](/docs/references/javascript/overview) library has fully loaded and the `Clerk` object is ready for use.
 
-#### Returns
-
+#### `isReady()` returns
 
 | Type | Description |
 | --- | --- |
@@ -101,7 +100,6 @@ All props below are optional.
 | `isSatellite` | `boolean \| ((url: URL) => boolean) \| undefined` | Clerk Flag for satellite apps. Experimental. |
 | `telemetry?` | `false \| { disabled?: boolean; debug?: boolean } \| undefined` | Controls whether or not Clerk will collect [telemetry data](/docs/telemetry). |
 
-
 ### `signOut()`
 
 ```typescript
@@ -128,7 +126,6 @@ Registers a listener that triggers a callback whenever a change in the [`Client`
 
 #### `Resources`
 
-
 | Name | Type | 
 | --- | --- |
 | `client` | [`Client`][client-ref] |
@@ -144,7 +141,7 @@ Registers a listener that triggers a callback whenever a change in the [`Client`
     - When a session is loading, [`User`][user-ref] and [`Session`][session-ref] will be `undefined`.
 </Callout>
 
-#### Returns
+#### `addListener()` returns
 
 ```typescript
 type UnsubscribeCallback = () => void;
@@ -183,7 +180,6 @@ function authenticateWithMetamask({
     <ComponentPreviewCards title="Create Organization" image="/docs/images/ui-components/component-org_create.svg" link="/docs/references/javascript/clerk/create-organization" cta="Read docs"/>
   </div>
 </div>
-
 
 ## Additional methods
 
