--- a/docs/references/react/use-organization-list.mdx
+++ b/docs/references/react/use-organization-list.mdx
@@ -12,10 +12,11 @@ The `useOrganizationList` hook allows you to retrieve the memberships, invitatio
 The `useOrganizationList` hook requires developers to opt-in by specifying which resource they need to fetch and paginate through. It is ideal for infinite lists or tables.
 
 <Callout type="info">
-    Note that your component must be a descendant of [`<ClerkProvider/>`](/docs/components/clerk-provider).
+  Note that your component must be a descendant of [`<ClerkProvider/>`](/docs/components/clerk-provider).
 </Callout>
 
 ### Infinite list of joined organizations
+
 <CodeBlockTabs type="framework" options={["Next.js", "React"]}>
 ```tsx filename="pages/joined-organizations.tsx"
 import { useOrganizationList } from "@clerk/nextjs";
@@ -245,8 +246,8 @@ The `userMemberships`, `userInvitations`, and `userSuggestions` are returned as 
 | Variables | Description |
 | --- | --- |
 | `isLoaded` | A boolean is set to `false` until Clerk loads and initializes. Once Clerk loads, `isLoaded` will be set to `true`. |
-| `createOrganization` | A function that returns a promise that resolves to the newly created Organization. It accepts a name and a slug |
-| `setActive` | A function that sets the active organization. It accepts either the organization object or the organization id. |
+| `createOrganization` | A function that returns a promise that resolves to the newly created organization. For more information on its usage, see the dedicated [`createOrganization` docs](/docs/references/javascript/clerk/organization-methods#create-organization). |
+| `setActive` | A function that sets the active organization. For more information on its usage, see the dedicated [`setActive` docs](/docs/references/javascript/clerk/session-methods#set-active). |
 | `userMemberships` | API for fetching [paginated resources](#paginatedresources). |
 | `userInvitations` | API for fetching [paginated resources](#paginatedresources). |
 | `userSuggestions` | API for fetching [paginated resources](#paginatedresources). |
