--- a/docs/references/javascript/clerk/organization-methods.mdx
+++ b/docs/references/javascript/clerk/organization-methods.mdx
@@ -9,20 +9,19 @@ These are all methods on [the Clerk class](/docs/references/javascript/clerk/cle
 
 ## `getOrganization()`
 
+The `getOrganization` method is used to get the information of an organization programatically.
+
 ```typescript
 function getOrganization(organizationId: string): Promise<Organization | undefined>;
 ```
 
-The `getOrganization` method is used to get the information of an organization programatically.
-
-
-### Properties
+### `getOrganization()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to be found. |
 
-### Returns
+### `getOrganization()` returns
 
 | Type | Description |
 | --- | --- |
@@ -30,35 +29,90 @@ The `getOrganization` method is used to get the information of an organization p
 
 ## `createOrganization()`
 
-```typescript
-function createOrganization({name, slug}: CreateOrganizationParams): Promise<Organization>;
-```
-
 The `createOrganization` method is used to create an organization programatically.
 
-### Properties
+```typescript
+function createOrganization(params: CreateOrganizationParams): Promise<Organization>;
+```
+
+### `CreateOrganizationParams`
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `name` | `string` | The name of the organization to be created. |
 | `slug?` | `string` | The optional slug of the organization to be created. |
 
-### Returns
+### `createOrganization()` returns
 
 | Type | Description |
 | --- | --- |
 | <code>Promise\<[Organization][org-ref\></code> | This method returns a `Promise` which resolves to the newly created [`Organization`][org-ref]. |
 
+### `createOrganization()` example
+
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+```javascript filename="index.js" {7-24}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
+  await clerk.load();
+
+  // Create an organization
+  const org = await clerk.createOrganization({
+    name: 'My Organization',
+    slug: 'my-organization',
+  });
+
+  // org will be the newly created Organization object
+  // you can use org however you would like moving forward,
+  // for example, check the org ID:
+  console.log(org.id);
+```
+
+```html filename="index.html" {18-28}
+  <script>
+    // Get this URL and Publishable Key from the Clerk Dashboard
+    const clerkPublishableKey = `{{pub_key}}`;
+    const frontendApi = 'https://[your-domain].clerk.accounts.dev';
+    const version = '@latest'; // Set to appropriate version
+  
+    // Creates asynchronous script
+    const script = document.createElement('script');
+    script.setAttribute('data-clerk-frontend-api', frontendApi);
+    script.setAttribute('data-clerk-publishable-key', clerkPublishableKey);
+    script.async = true;
+    script.src = `${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+  
+    // Adds listener to initialize ClerkJS after it's loaded
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+      
+      // Create an organization
+      const org = await window.Clerk.createOrganization({
+        name: 'My Organization',
+        slug: 'my-organization',
+      });
+
+      // org will be the newly created Organization object
+      // you can use org however you would like moving forward,
+      // for example, check the org ID:
+      console.log(org.id);
+    });
+    document.body.appendChild(script);
+  </script>
+```
+</CodeBlockTabs>
+
 ## `getOrganizationMemberships()`
+
+Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`][orgmem-ref]s.
 
 ```typescript
 function getOrganizationMemberships(): Promise<OrganizationMembership[]>;
 ```
 
-Get a list of all organizations your current user is a part of in the form of an array of [`OrganizationMembership`][orgmem-ref]s.
-
-
-### Returns
+### `getOrganizationMemberships()` returns
 
 | Type | Description |
 | --- | --- |
