Organization.getInvitations() replaces Organization.getPendingInvitations()

--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -394,7 +394,7 @@ function InviteMember(){
   <div>
     <label>Email address</div>
     <br />
-    <input type="email" name="email_address" />
+    <input type="email" id="email_address" name="email_address" />
   </div>
   <button>Invite</button>
 </form>
@@ -403,10 +403,10 @@ function InviteMember(){
   async function renderMemberships(organization, isAdmin) {
     const list = document.getElementById("memberships_list");
     try {
-      const memberships = await organization.getMembers();
+      const memberships = await organization.getMemberships();
       memberships.map((membership) => {
         const li = document.createElement("li");
-        li.textContent = `${membership.identifier} - ${membership.role}`;
+        li.textContent = `${membership.publicUserData.identifier} - ${membership.role}`;
 
         // Add administrative actions; update role and remove member.
         if (isAdmin) {
@@ -484,7 +484,7 @@ function InviteMember(){
       const form = document.getElementById("new_invitation");
       form.addEventListener("submit", async function(e) {
         e.preventDefault();
-        const inputEl = form.getElementsByTagName("input");
+        const inputEl = document.getElementById("email_address");
         if (!inputEl) {
           return;
         }
