--- a/docs/references/javascript/clerk/create-organization.mdx
+++ b/docs/references/javascript/clerk/create-organization.mdx
@@ -13,7 +13,18 @@ The [`<CreateOrganization />`][createorg-ref] component is used to render an org
 
 Render the [`<CreateOrganization />`][createorg-ref] component to an HTML `<div>` element.
 
-### Usage
+```typescript
+function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
+```
+
+### `mountCreateOrganization()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<CreateOrganization />`][createorg-ref] component |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
+
+### `mountCreateOrganization()` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {15-19}
@@ -62,22 +73,21 @@ Render the [`<CreateOrganization />`][createorg-ref] component to an HTML `<div>
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function mountCreateOrganization(node: HTMLDivElement, props?: CreateOrganizationProps): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the [`<CreateOrganization />`][createorg-ref] component |
-| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
-
 ## `unmountCreateOrganization`
 
 Unmount and run cleanup on an existing [`<CreateOrganization />`][createorg-ref] component instance.
 
-### Usage
+```typescript
+function unmountCreateOrganization(node: HTMLDivElement): void;
+```
+
+### `unmountCreateOrganization` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<CreateOrganization />`][createorg-ref] component instance |
+
+### `unmountCreateOrganization` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {19}
@@ -126,21 +136,21 @@ Unmount and run cleanup on an existing [`<CreateOrganization />`][createorg-ref]
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function unmountCreateOrganization(node: HTMLDivElement): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered [`<CreateOrganization />`][createorg-ref] component instance |
-
 ## `openCreateOrganization`
 
 Opens the [`<CreateOrganization />`][createorg-ref] component as an overlay at the root of your HTML `body` element.
 
-### Usage
+```typescript
+function openCreateOrganization(props?: CreateOrganizationProps): void;
+```
+
+### `openCreateOrganization` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
+
+### `openCreateOrganization` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {7-11}
@@ -178,21 +188,15 @@ Opens the [`<CreateOrganization />`][createorg-ref] component as an overlay at t
   ```
 </CodeBlockTabs>
 
-### Properties
-
-```typescript
-function openCreateOrganization(props?: CreateOrganizationProps): void;
-```
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `props?` | [`CreateOrganizationProps`](#create-organization-props) | The properties to pass to the [`<CreateOrganization />`][createorg-ref] component |
-
 ## `closeCreateOrganization`
 
 Closes the organization profile overlay.
 
-### Usage
+```typescript
+function closeCreateOrganization(): void;
+```
+
+### `closeCreateOrganization` usage
 
 <CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
   ```typescript {11}
@@ -229,12 +233,6 @@ Closes the organization profile overlay.
   </script>
   ```
 </CodeBlockTabs>
-
-### Properties
-
-```typescript
-function closeCreateOrganization(): void;
-```
 
 ## `CreateOrganizationProps`
 
