chore: Add Bun.js to add @clerk package to different projects.

--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -17,7 +17,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have an Expo application ready, you need to install Clerk's Expo SDK.
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm", "bun"]}>
   ```bash filename="terminal"
   npm install @clerk/clerk-expo
   ```
@@ -28,6 +28,10 @@ Once you have an Expo application ready, you need to install Clerk's Expo SDK.
 
   ```bash filename="terminal"
   pnpm add @clerk/clerk-expo
+  ```
+
+  ```bash filename="terminal"
+  bun add @clerk/clerk-expo
   ```
 </CodeBlockTabs>
 
