--- a/docs/quickstarts/fastify.mdx
+++ b/docs/quickstarts/fastify.mdx
@@ -17,7 +17,7 @@ If you're looking for a more complete example, check out our [Fastify example ap
 <Steps>
 ### Install `@clerk/fastify`
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm", "bun"]}>
   ```bash filename="terminal"
   npm install @clerk/fastify
   ```
@@ -28,6 +28,10 @@ If you're looking for a more complete example, check out our [Fastify example ap
 
   ```bash filename="terminal"
   pnpm add @clerk/fastify
+  ```
+
+  ```bash filename="terminal"
+  bun add @clerk/fastify
   ```
 </CodeBlockTabs>
 
