--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -20,7 +20,7 @@ To use the ClerkJS package, you have two options:
 
 At the root of your project, install the ClerkJS package using your package manager of choice:
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm", "bun"]}>
   ```bash filename="terminal"
   npm install @clerk/clerk-js
   ```
@@ -31,6 +31,10 @@ At the root of your project, install the ClerkJS package using your package mana
 
   ```bash filename="terminal"
   pnpm add @clerk/clerk-js
+  ```
+
+  ```bash filename="terminal"
+  bun add @clerk/clerk-js
   ```
 </CodeBlockTabs>
 
