--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -31,7 +31,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Clerk's Next.js SDK gives you access to prebuilt [components](/docs/components/overview), [hooks](/docs/references/nextjs/overview#client-side-helpers), and [helpers](/docs/references/nextjs/overview) for Next.js Server Components, Route Handlers and Middleware. Install it by running the following command in your terminal:
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm", "bun"]}>
   ```bash filename="terminal"
   npm install @clerk/nextjs
   ```
@@ -44,6 +44,9 @@ yarn add @clerk/nextjs
 pnpm add @clerk/nextjs
 ```
 
+```bash filename="terminal"
+bun add @clerk/nextjs
+```
 </CodeBlockTabs>
 
 ### Set environment keys
