--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -35,7 +35,7 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
 
 Scaffold your new React application using [Vite](https://vitejs.dev/guide/#scaffolding-your-first-vite-project).
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm", "bun"]}>
   ```bash filename="terminal"
   npm create vite@latest clerk-react -- --template react-ts
   cd clerk-react
@@ -57,6 +57,12 @@ Scaffold your new React application using [Vite](https://vitejs.dev/guide/#scaff
   pnpm dev
   ```
 
+  ```bash filename="terminal"
+  bun create vite clerk-react --template react-ts
+  cd clerk-react
+  bun install
+  bun dev
+  ```
 </CodeBlockTabs>
 
 
