--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -12,7 +12,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
 
-<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
+<CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm", "bun"]}>
   ```bash filename="terminal"
   npm install gatsby-plugin-clerk
   ```
@@ -23,6 +23,10 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
 
   ```bash filename="terminal"
   pnpm add gatsby-plugin-clerk
+  ```
+
+  ```bash filename="terminal"
+  bun add gatsby-plugin-clerk
   ```
 </CodeBlockTabs>
 
