--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -8,7 +8,7 @@ description: Creates an invitation for new users to join an organization.
 Creates an invitation for new users to join an organization.
 
 ```tsx
-const name = 'my-organization-name';
+const organizationId = 'my-organization-id';
 
 const inviterUserId = 'my-user-id';
 
@@ -16,7 +16,7 @@ const emailAddress = 'user-email-address';
 
 const role = 'role-to-assign-user';
 
-const organization = await clerkClient.organizations.createOrganizationInvitation({name, inviterUserId, emailAddress, role});
+const organization = await clerkClient.organizations.createOrganizationInvitation({organizationId, inviterUserId, emailAddress, role});
 ```
 
 ## `CreateOrganizationInvitationParams`
