feat(v5-upgrade-guide): Apply `MembershipRole` replacement
https://github.com/clerk/javascript/pull/2388

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -889,6 +889,21 @@ A couple of exported constants have been removed from `@clerk/nextjs` as you sho
   </AccordionPanel>
 </Accordion>
 
+-  `MembershipRole` type was replaced with `OrganizationCustomRoleKey` of Custom Roles. This type can be found in the following examples:
+    ```jsx
+    import { useAuth } from '@clerk/nextjs'
+
+    const { orgRole } = useAuth();
+    ```
+    
+    To support the existing roles `admin`, `basic_member`, `guest_member` apply interface merging using the following snippet.
+    ```jsx
+    interface ClerkAuthorization {
+      permission: '';
+      role: 'admin' | 'basic_member' | 'guest_member';
+    }
+    ```
+
 **Deprecated:**
 
 - [`authMiddleware`](/docs/references/nextjs/auth-middleware). We highly recommend using [`clerkMiddleware`](/docs/references/nextjs/clerk-middleware) going forward. `clerkMiddleware` protects no routes by default and you need to add your individual routes you want to opt into protection. Here's an example of having all routes public except for everything under `/dashboard`.
