fix: Remove reference of MembershipRole from use-organization

--- a/docs/references/react/use-organization.mdx
+++ b/docs/references/react/use-organization.mdx
@@ -162,7 +162,7 @@ To see a demo application utilising the hook and the organizations feature, take
 | --- | --- |
 | `invitations?` | [`CommonPaginatedParams`](#common-paginated-params) and [`OrganizationInvitationStatus[]`](#organization-invitation-status) |
 | `membershipRequests?` | [`CommonPaginatedParams`](#common-paginated-params) and [`OrganizationInvitationStatus`](#organization-invitation-status) |
-| `memberships?` | [`CommonPaginatedParams`](#common-paginated-params) and [`MembershipRole?`](#membership-role) |
+| `memberships?` | [`CommonPaginatedParams`](#common-paginated-params) and [`OrganizationCustomRoleKey?`](#organization-custom-role-key) |
 | `domains?` | [`CommonPaginatedParams`](#commonpaginated-params) and [`OrganizationEnrollmentMode`](#organization-enrollment-mode) |
 
 ### `CommonPaginatedParams`
@@ -182,10 +182,10 @@ To see a demo application utilising the hook and the organizations feature, take
 type OrganizationInvitationStatus = "pending" | "accepted" | "revoked";
 ```
 
-### `MembershipRole`
+### `OrganizationCustomRoleKey`
 
 ```typescript
-type MembershipRole = "admin" | "org:member";
+type OrganizationCustomRoleKey = string; // or a custom union provided via the ClerkAuthorization interface
 ```
 
 ### `OrganizationEnrollmentMode`
