Add @clerk/localizations changes on the upgrade guide to v5

--- a/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
+++ b/docs/upgrade-guides/upgrading-from-v4-to-v5.mdx
@@ -731,7 +731,159 @@ Some more niche use cases and their changes:
 
 ### `@clerk/localizations`
 
-TODO
+The following changes need to be applied only if you are using a custom localization object. If you are using one of Clerk's default localizations, you just need to update to latest version of `@clerk/localizations`.
+
+- Add the following localization keys to your custom localization object. You can find the `en-US` values in the [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts).
+
+1. `formFieldInputPlaceholder__confirmDeletionUserAccount`
+2. `formButtonPrimary__verify`
+3. `signIn.forgotPassword.title`
+4. `signIn.forgotPassword.subtitle_email`
+5. `signIn.forgotPassword.subtitle_phone`
+6. `signIn.alternativeMethods.subtitle`
+7. `signIn.alternativeMethods.actionText`
+8. `userProfile.navbar.title`
+9. `userProfile.navbar.description`
+10. `userProfile.navbar.account`
+11. `userProfile.navbar.security`
+12. `userProfile.start.profileSection.primaryButton`
+13. `organizationProfile.navbar.title`
+14. `organizationProfile.navbar.description`
+15. `organizationProfile.navbar.general`
+16. `organizationProfile.navbar.members`
+17. `organizationProfile.start.headerTitle__general`
+18. `organizationProfile.start.profileSection.title`
+19. `organizationProfile.start.profileSection.primaryButton`
+20. `organizationProfile.start.profileSection.uploadAction__title`
+21. `organizationProfile.profilePage.domainSection.menuAction__verify`
+22. `organizationProfile.profilePage.domainSection.menuAction__remove`
+23. `organizationProfile.profilePage.domainSection.menuAction__manage`
+24. `organizationProfile.verifiedDomainPage.title`
+25. `unstable__errors.form_param_format_invalid__phone_number`
+26. `userProfile.mfaPhoneCodePage.backButton`
+27. `userProfile.mfaPhoneCodePage.successTitle`
+28. `userProfile.mfaPhoneCodePage.successMessage1`
+29. `userProfile.mfaPhoneCodePage.successMessage2`
+
+- Delete the following localization keys from your custom localization object. They are not used anymore.
+
+1. `signIn.forgotPassword.title_email`
+2. `signIn.forgotPassword.title_phone`
+3. `signIn.forgotPassword.formSubtitle_email`
+4. `signIn.forgotPassword.formSubtitle_phone`
+5. `signIn.emailCode.formSubtitle`
+6. `signIn.phoneCode.formSubtitle`
+7. `signIn.phoneCodeMfa.formSubtitle`
+8. `signIn.totpMfa.formSubtitle`
+9. `signIn.backupCodeMfa.formTitle`
+10. `signIn.backupCodeMfa.formSubtitle`
+11. `userProfile.start.emailAddressesSection.detailsTitle__primary`
+12. `userProfile.start.emailAddressesSection.detailsSubtitle__primary`
+13. `userProfile.start.emailAddressesSection.detailsTitle__nonPrimary`
+14. `userProfile.start.emailAddressesSection.detailsSubtitle__nonPrimary`
+15. `userProfile.start.emailAddressesSection.detailsTitle__unverified`
+16. `userProfile.start.emailAddressesSection.detailsSubtitle__unverified`
+17. `userProfile.start.emailAddressesSection.destructiveActionTitle`
+18. `userProfile.start.emailAddressesSection.destructiveActionSubtitle`
+19. `userProfile.start.phoneNumbersSection.detailsTitle__primary`
+20. `userProfile.start.phoneNumbersSection.detailsSubtitle__primary`
+21. `userProfile.start.phoneNumbersSection.detailsTitle__nonPrimary`
+22. `userProfile.start.phoneNumbersSection.detailsSubtitle__nonPrimary`
+23. `userProfile.start.phoneNumbersSection.detailsTitle__unverified`
+24. `userProfile.start.phoneNumbersSection.detailsSubtitle__unverified`
+25. `userProfile.start.phoneNumbersSection.destructiveActionTitle`
+26. `userProfile.start.phoneNumbersSection.destructiveActionSubtitle`
+27. `userProfile.start.connectedAccountsSection.title__conectionFailed`
+28. `userProfile.start.connectedAccountsSection.title__connectionFailed`
+29. `userProfile.start.connectedAccountsSection.title__reauthorize`
+30. `userProfile.start.connectedAccountsSection.subtitle__reauthorize`
+31. `userProfile.start.connectedAccountsSection.actionLabel__conectionFailed`
+32. `userProfile.start.connectedAccountsSection.destructiveActionSubtitle`
+33. `userProfile.start.connectedAccountsSection.destructiveActionAccordionSubtitle`
+34. `userProfile.start.mfaSection.phoneCode.destructiveActionTitle`
+35. `userProfile.start.mfaSection.phoneCode.destructiveActionSubtitle`
+36. `userProfile.start.mfaSection.phoneCode.title__default`
+37. `userProfile.start.mfaSection.phoneCode.title__setDefault`
+38. `userProfile.start.mfaSection.phoneCode.subtitle__default`
+39. `userProfile.start.mfaSection.phoneCode.subtitle__setDefault`
+40. `userProfile.start.mfaSection.totp.title`
+41. `userProfile.start.mfaSection.totp.subtitle`
+42. `userProfile.start.mfaSection.totp.destructiveActionSubtitle`
+43. `userProfile.start.mfaSection.totp.destructiveActionLabel`
+44. `userProfile.start.activeDevicesSection.primaryButton`
+45. `userProfile.start.activeDevicesSection.detailsTitle`
+46. `userProfile.start.activeDevicesSection.detailsSubtitle`
+47. `userProfile.start.activeDevicesSection.destructiveActionTitle`
+48. `userProfile.start.activeDevicesSection.destructiveActionSubtitle`
+49. `userProfile.start.web3WalletsSection.destructiveActionTitle`
+50. `userProfile.start.web3WalletsSection.destructiveActionSubtitle`
+51. `userProfile.start.dangerSection.deleteAccountTitle`
+52. `userProfile.start.dangerSection.deleteAccountDescription`
+53. `userProfile.start.headerSubtitle__account`
+54. `userProfile.start.headerSubtitle__security`
+55. `organizationProfile.start.headerTitle__settings`
+56. `organizationProfile.start.headerSubtitle__members`
+57. `organizationProfile.start.headerSubtitle__settings`
+58. `organizationProfile.profilePage.domainSection.unverifiedDomain_menuAction__verify`
+59. `organizationProfile.profilePage.domainSection.unverifiedDomain_menuAction__remove`
+60. `organizationProfile.profilePage.subtitle`
+61. `organizationProfile.membersPage.start.headerTitle__active`
+62. `organizationProfile.membersPage.start.headerTitle__invited`
+63. `createOrganization.subtitle`
+64. `formFieldLabel__emailAddress_phoneNumber`
+65. `formFieldLabel__phoneNumber_username`
+66. `formFieldLabel__emailAddress_phoneNumber_username`
+67. `formFieldInputPlaceholder__emailAddress_phoneNumber`
+68. `formFieldInputPlaceholder__phoneNumber_username`
+69. `formFieldInputPlaceholder__emailAddress_phoneNumber_username`
+70. `userProfile.phoneNumberPage.infoText__secondary`
+71. `userProfile.mfaPhoneCodePage.successMessage`
+
+- The following localization key values have changed. You can find the `en-US` values in the [en-US localization object](https://github.com/clerk/javascript/blob/main/packages/localizations/src/en-US.ts).
+
+1. `formFieldLabel__organizationName`
+2. `formFieldLabel__organizationSlug`
+3. `formFieldInputPlaceholder__emailAddresses`
+4. `signUp.start.subtitle`
+5. `signUp.start.actionText`
+6. `signUp.emailCode.subtitle`
+7. `signUp.phoneCode.subtitle`
+8. `signUp.continue.subtitle`
+9. `signUp.continue.actionText`
+10. `signIn.start.title`
+11. `signIn.start.subtitle`
+12. `signIn.start.actionText`
+13. `signIn.password.subtitle`
+14. `signIn.forgotPasswordAlternativeMethods.label__alternativeMethods`
+15. `signIn.resetPassword.title`
+16. `signIn.phoneCodeMfa.subtitle`
+17. `signIn.totpMfa.subtitle`
+18. `signIn.backupCodeMfa.subtitle`
+19. `userProfile.formButtonPrimary__continue`
+20. `userProfile.start.headerTitle__account`
+21. `userProfile.start.emailAddressesSection.detailsAction__unverified`
+22. `userProfile.start.emailAddressesSection.destructiveAction`
+23. `userProfile.start.mfaSection.phoneCode.destructiveActionLabel`
+24. `userProfile.start.mfaSection.backupCodes.actionLabel__regenerate`
+25. `userProfile.start.dangerSection.title`
+26. `userProfile.profilePage.imageFormSubtitle`
+27. `userProfile.profilePage.imageFormDestructiveActionSubtitle`
+28. `userProfile.profilePage.fileDropAreaHint`
+29. `userProfile.deletePage.actionDescription`
+30. `organizationSwitcher.action__createOrganization`
+31. `organizationSwitcher.action__manageOrganization`
+32. `organizationProfile.profilePage.title`
+33. `organizationProfile.profilePage.dangerSection.leaveOrganization.actionDescription`
+34. `organizationProfile.profilePage.dangerSection.deleteOrganization.actionDescription`
+35. `organizationProfile.invitePage.title`
+36. `organizationProfile.invitePage.subtitle`
+37. `organizationList.title`
+38. `organizationList.titleWithoutPersonal`
+39. `userProfile.phoneNumberPage.title`
+40. `userProfile.phoneNumberPage.infoText`
+41. `userProfile.mfaPhoneCodePage.subtitle__availablePhoneNumbers`
+42. `userProfile.mfaPhoneCodePage.subtitle__unavailablePhoneNumbers`
+
 
 ### `@clerk/nextjs`
 
