--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -467,7 +467,7 @@ function InviteMember(){
   async function init() {
     // This is the current organization ID.
     const organizationId = "org_XXXXXXX";
-    const organizationMemberships = await window.Clerk.getOrganizationMemberships()
+    const organizationMemberships = await window.Clerk.user.getOrganizationMemberships()
     const currentMembership = organizationMemberships.find(membership 
       => membership.organization.id === organizationId);
     const currentOrganization = currentMembership.organization;
