remove setSession completely, in favour of setActive

--- a/docs/references/javascript/clerk/session-methods.mdx
+++ b/docs/references/javascript/clerk/session-methods.mdx
@@ -5,46 +5,11 @@ description: These are all methods on the Clerk class that help you manage the a
 
 # Session methods
 
-These are all methods on [the Clerk class](/docs/references/javascript/clerk/clerk) that help you manage the active session and/or organization.
-
-## `setSession()` (deprecated)
-
-```typescript
-function setSession(
-  session: Session | string | null,
-  beforeEmit?: BeforeEmitCallback
-): Promise<void>;
-```
-
-<Callout type="danger">
-  Deprecated in favor of [`setActive()`](#set-active).
-</Callout>
-
-Set the current session on this client to the provided session. The provided session can be either a complete [`Session`][session-ref] object or simply its unique identifier.
-
-Passing null as the session will result in the current session to be removed from the client.
-
-If an active session already exists, it will be replaced with the new one. The change happens in three steps:
-
-1. The current [`Session`][session-ref] object is set to `undefined`, which causes the control components to stop rendering their children as though Clerk is still initializing.
-2. The `beforeEmit` callback is executed. If a `Promise` is returned, Clerk waits for the `Promise` to resolve.
-3. The current [`Session`][session-ref] is set to the passed `session`. This causes the control components to render their children again.
-
-### Properties
-
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `session` | [`Session`][session-ref] \| `string` \| `null` | A `Session` object or `Session ID` string to be set as the current session, or `null` to simply remove the active session, without setting a new one. |
-| `beforeEmit?` | `(session: Session \| null) => Promise<any>` | Callback that will trigger when the current session is set to `undefined`, before finally being set to the passed session. Usually used for navigation. |
-
-### Returns
-
-| Type | Description |
-| --- | --- |
-| `Promise<void>` | The `Promise` will resolve after the passed `session` is set. |
+These are all methods on the [`Clerk`](/docs/references/javascript/clerk/clerk) class that help you manage the active session and/or organization.
 
 ## `setActive()`
+
+A method used to set the active session and/or organization.
 
 ```typescript
 function setActive({
@@ -54,8 +19,6 @@ function setActive({
 }: SetActiveParams): Promise<void>;
 ```
 
-A method used to set the active session and/or organization.
-
 ### `SetActiveParams`
 
 | Name | Type | Description |
@@ -64,7 +27,7 @@ A method used to set the active session and/or organization.
 | `organization` | [`Organization`](/docs/references/javascript/organization/organization) \| `string` \| `null` | The organization resource or organization ID (string version) to be set as active in the current session. If `null`, the currently active organization is removed as active. |
 | `beforeEmit?` | `(session?: Session \| null) => void \| Promise<any>` | Callback run just before the active session and/or organization is set to the passed object. Can be used to hook up for pre-navigation actions. |
 
-### Returns
+### `setActive()` returns
 
 | Type | Description |
 | --- | --- |
