--- a/docs/references/backend/organization/get-organization-invitation-list.mdx
+++ b/docs/references/backend/organization/get-organization-invitation-list.mdx
@@ -18,10 +18,25 @@ const invitations = await clerkClient.organizations.getOrganizationInvitationLis
 | Name | Type | Description |
 | --- | --- | --- |
 | `organizationId` | `string` | The ID of the organization to retrieve the list of pending invitations from. |
+| `status?` | [ 'pending' | 'accepted' | 'status' ] | Filters the list of invitations by status. |
 | `limit?` | `number` | The number of results to return. Must be an integer greater than zero and less than 500. |
 | `offset?` | `number` | The number of results to skip. |
 
 ## Examples
+
+### `getOrganizationInvitationList({ status })`
+
+Retrieves organization invitation list that is filtered by the status of the invitation.
+
+```tsx
+const organizationId = 'my-organization-id';
+
+const invitations = await clerkClient.organizations.getOrganizationInvitationList({
+  organizationId,
+  // returns a list of invitations that have not yet been accepted
+  status: [ 'pending' ],
+});
+```
 
 ### `getOrganizationInvitationList({ limit })`
 
